Fix hero image cut off on some solution pages

--- a/src/components/Solutions/Sections/Hero/styles.module.less
+++ b/src/components/Solutions/Sections/Hero/styles.module.less
@@ -8,6 +8,17 @@
   div {
     height: 100%;
     margin-left: auto;
+  }
+
+  @media (min-width: 1025px) {
+    div {
+      max-width: 536px;
+    }
+  }
+}
+
+.heroVideoWrapper {
+  div {
     aspect-ratio: 514 / 306;
   }
 
